add documentation for recap instalment and refactor eror handling
