# docs/swagger.json
@@ -188,6 +188,35 @@
                 }
             }
         },
+        "/recap": {
+            "get": {
+                "description": "Mengambil rekap cicilan dan status pembayaran",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "installment"
+                ],
+                "summary": "Get installment recap",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/models.InstallmentRecap"
+                            }
+                        }
+                    },
+                    "500": {
+                        "description": "Kesalahan server",
+                        "schema": {
+                            "$ref": "#/definitions/utils.ErrorResponse"
+                        }
+                    }
+                }
+            }
+        },
         "/users": {
             "get": {
                 "description": "Menampilkan daftar semua pengguna",
@@ -230,6 +259,41 @@
                 },
                 "merchant_id": {
                     "type": "integer"
+                },
+                "total_amount": {
+                    "type": "number"
+                },
+                "updated_at": {
+                    "type": "string"
+                },
+                "user_id": {
+                    "type": "integer"
+                }
+            }
+        },
+        "models.InstallmentRecap": {
+            "type": "object",
+            "properties": {
+                "created_at": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "integer"
+                },
+                "merchant_id": {
+                    "type": "integer"
+                },
+                "payments": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/models.Payment"
+                    }
+                },
+                "remaining": {
+                    "type": "number"
+                },
+                "status": {
+                    "type": "string"
                 },
                 "total_amount": {
                     "type": "number"
